--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -3,7 +3,6 @@
     --textColor: white;
 }
 
-
 /* Home */
 
 .Info{
@@ -206,7 +205,7 @@
 
 /* Create Form */
 
-.create-form{
+.forms{
   grid-area: main;
   display: flex;
   flex-direction: column;
